force-app/main/default/objects/RTV_SKU_KPI__c/RTV_SKU_KPI__c.object-meta.xml
<CustomObject>
    <description>SKU KPI</description>
    <label>RTV SKU KPI</label>
    <nameField>
        <label>Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV SKU KPI</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>