force-app/main/default/objects/RTV_SKU_KPI__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <label>ACCOUNT GROUP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>