force-app/main/default/objects/RTV_SKU_KPI__c/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <label>Actual Amount(CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>