force-app/main/default/objects/RTV_SKU_KPI__c/fields/Actual_Date_of_Billing_Realease__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_of_Billing_Realease__c</fullName>
    <label>Actual Date of Billing Realease</label>
    <type>Date</type>
</CustomField>