force-app/main/default/objects/RTV_SKU_KPI__c/fields/Actual_Date_Of_CS_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_CS_Confirmed__c</fullName>
    <label>Actual Date Of CS Confirmed</label>
    <type>Date</type>
</CustomField>