force-app/main/default/objects/RTV_SKU_KPI__c/fields/Actual_Date_Of_Delivered_Complete__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_Delivered_Complete__c</fullName>
    <label>Actual Date Of Arrive DC</label>
    <type>Date</type>
</CustomField>