force-app/main/default/objects/RTV_SKU_KPI__c/fields/Actual_Date_Of_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_Kick_Off__c</fullName>
    <label>Actual Date Of Kick Off</label>
    <type>Date</type>
</CustomField>