force-app/main/default/objects/RTV_SKU_KPI__c/fields/Actual_Date_Of_PTLF__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_PTLF__c</fullName>
    <label>Actual Date Of PTLF</label>
    <type>Date</type>
</CustomField>