force-app/main/default/objects/RTV_SKU_KPI__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <description>申请金额（美元）</description>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>