force-app/main/default/objects/RTV_SKU_KPI__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>