force-app/main/default/objects/RTV_SKU_KPI__c/fields/Expected_Date_of_Billing_Realease__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_of_Billing_Realease__c</fullName>
    <label>Expected Date of Billing Realease</label>
    <type>Date</type>
</CustomField>