force-app/main/default/objects/RTV_SKU_KPI__c/fields/Expected_Date_Of_CS_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_CS_Confirmed__c</fullName>
    <label>Expected Date Of CS Confirmed</label>
    <type>Date</type>
</CustomField>