force-app/main/default/objects/RTV_SKU_KPI__c/fields/Expected_Date_Of_Delivered_Complete__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_Delivered_Complete__c</fullName>
    <label>Expected Date Of Arrive DC</label>
    <type>Date</type>
</CustomField>