force-app/main/default/objects/RTV_SKU_KPI__c/fields/Expected_Date_Of_Inpected__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_Inpected__c</fullName>
    <label>Expected Date Of Inpected</label>
    <type>Date</type>
</CustomField>