force-app/main/default/objects/RTV_SKU_KPI__c/fields/Expected_Date_Of_PTLF__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_PTLF__c</fullName>
    <label>Expected Date Of PTLF</label>
    <type>Date</type>
</CustomField>