force-app/main/default/objects/RTV_SKU_KPI__c/fields/Inspect_QTY_A__c.field-meta.xml
<CustomField>
    <fullName>Inspect_QTY_A__c</fullName>
    <label>Inspect QTY (A)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>