force-app/main/default/objects/RTV_SKU_KPI__c/fields/Inspect_QTY_B__c.field-meta.xml
<CustomField>
    <fullName>Inspect_QTY_B__c</fullName>
    <label>Inspect QTY (B)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>