force-app/main/default/objects/RTV_SKU_KPI__c/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <label>Material code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>