force-app/main/default/objects/RTV_SKU_KPI__c/fields/Order_Season__c.field-meta.xml
<CustomField>
    <fullName>Order_Season__c</fullName>
    <label>Order Season</label>
    <length>50</length>
    <type>Text</type>
</CustomField>