force-app/main/default/objects/RTV_SKU_KPI__c/fields/OrderItemId__c.field-meta.xml
<CustomField>
    <fullName>OrderItemId__c</fullName>
    <label>OrderItemId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>