force-app/main/default/objects/RTV_SKU_KPI__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <label>OrderStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>