force-app/main/default/objects/RTV_SKU_KPI__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>尺寸(美码)</description>
    <label>Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>