force-app/main/default/objects/RTV_SKU_KPI__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <length>40</length>
    <type>Text</type>
</CustomField>