force-app/main/default/objects/RTV_SKU_KPI__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Summary</label>
    <referenceTo>RTV_Summary__c</referenceTo>
    <relationshipLabel>RTV SKU KPI</relationshipLabel>
    <relationshipName>RTV_SKU_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>