force-app/main/default/objects/RTV_SKU_KPI__c/fields/SummaryId__c.field-meta.xml
<CustomField>
    <fullName>SummaryId__c</fullName>
    <label>SummaryId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>